--- a/site/index.html
+++ b/site/index.html
@@ -19,11 +19,12 @@
     <!- Your app likely wants this, or something like it. ->
     <link rel='stylesheet' href='css/prettytable.css'>
 
-    <!- Your app should include these two lines, to get the JS code necessary
-     for persistence in LocalStorage, and anything else required by FotoJson.
-     I tried moving the elm.js load to js.js, but it didn't work.
+    <!- Your app should include these three lines, to get the JS code necessary
+     for persistence in LocalStorage, and the Elm code.
      ->
-    <script type='text/javascript' src='js/js.js'></script>
+
+    <script type='text/javascript' src='js/PortFunnel.js'></script>
+    <script type='text/javascript' src='js/PortFunnel/LocalStorage.js'></script>
     <script type='text/javascript' src='elm.js'></script>
 
     <!-- Do-nothing worker needed to get some browsers to recognize a webapp. -->
