Support for AppSettings. Need to use it in viewInternal.

--- a/site/index.html
+++ b/site/index.html
@@ -47,6 +47,21 @@
         <a href='https://github.com/billstclair/fotojson'>GitHub</a>
       </p>
     </noscript>
+    <!-- This specifies app-specific properties, used by the Elm code.
+         Change it for your app.
+      -->
+    <script type='text/javascript'>
+      var fotojsonSettings =
+          { title: "Foto JSON", // Page title in browser tab
+            showTitle : false,  // Set to true to display title at top of page.
+            localStoragePrefix: "fotojson",  // unique to your app
+            githubUrl: "https: github.com/billstclair/fotojson", // null to not show
+            copyright: { date: "2024-2025",
+                         url: "https://billstclair.com/",
+                         text: "Bill St. Clair"
+                        }
+          }
+      </script>
     <script type='text/javascript' src='js/run.js'></script>
   </body>
 </html>
